--- a/src/Pages/Cart/cart.module.css
+++ b/src/Pages/Cart/cart.module.css
@@ -114,7 +114,7 @@
 }
 
 .anchorTag {
-  color: teal;
+  color: #23587F;
 }
 
 .offersSection {
@@ -216,7 +216,7 @@
 }
 
 .savingsWrapper {
-  border: 2px dotted #3bb896;
+  border: 2px dotted #23587F;
   width: 360px;
   height: 89px;
   margin: 15px 0 0;
@@ -229,7 +229,7 @@
   width: 330px;
   height: 21px;
   font-family: "Open Sans", sans-serif;
-  color: #3bb896;
+  color: #23587F;
   font-size: 15px;
   display: flex;
   justify-content: space-around;
@@ -259,7 +259,8 @@
 
 .MRPDiscount {
   font-size: 13px;
-  color: #3bb896;
+  color: #23587F;
+  
 }
 
 .otherChargesWrapper {
